--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <main>
             <app-root>Loading...</app-root>
         </main>
